--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,7 +12,7 @@
       <%= f.text_field :introduction %>
     </div>
     <div class="field">
-      <%= f.label :userimage, "ユーザー画像" %>
+      <%= f.label :userimage, "ユーザーアイコン" %><br>
       <%= f.file_field :user_image %>
     </div>
     <div class="actions">
